src/test/ui/impl-trait/equality.stderr
error[E0308]: mismatched types
  --> $DIR/equality.rs:25:5
   |
25 |     0_u32
   |     ^^^^^ expected i32, found u32
   |
   = note: expected type `i32`
              found type `u32`

error[E0308]: mismatched types
  --> $DIR/equality.rs:44:18
   |
44 |     let _: u32 = hide(0_u32);
   |                  ^^^^^^^^^^^ expected u32, found anonymized type
   |
   = note: expected type `u32`
              found type `impl Foo`

error[E0308]: mismatched types
  --> $DIR/equality.rs:50:18
   |
50 |     let _: i32 = Leak::leak(hide(0_i32));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^ expected i32, found associated type
   |
   = note: expected type `i32`
              found type `<impl Foo as Leak>::T`

error[E0308]: mismatched types
  --> $DIR/equality.rs:57:10
   |
57 |     x = (x.1,
   |          ^^^ expected u32, found i32
   |
   = note: expected type `impl Foo` (u32)
              found type `impl Foo` (i32)

error[E0308]: mismatched types
  --> $DIR/equality.rs:60:10
   |
60 |          x.0);
   |          ^^^ expected i32, found u32
   |
   = note: expected type `impl Foo` (i32)
              found type `impl Foo` (u32)

error: aborting due to 5 previous errors

